Sculpt Paint tool defaults #97616

Closed
opened 2022-04-26 10:14:01 +02:00 by Julien Kaspar · 17 comments
Member

(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar.

The current default settings for the Paint and Smear brushes in sculpt mode are not ideal and need to be updated for their first release for a better out of the box experience.

Paint Brush

  • Set Strength to a value of 1
  • Set default color to black, with white as the secondary color

Smear Brush

  • Set Strength to 0.6

Color Filter

  • Set filter type to "Fill"
  • Set Fill Color to pure white
(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar. The current default settings for the Paint and Smear brushes in sculpt mode are not ideal and need to be updated for their first release for a better out of the box experience. ## Paint Brush - Set Strength to a value of 1 - Set default color to black, with white as the secondary color ## Smear Brush - Set Strength to 0.6 ## Color Filter - Set filter type to "Fill" - Set Fill Color to pure white
Author
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Author
Member

Added subscribers: @JulienKaspar, @JosephEagar

Added subscribers: @JulienKaspar, @JosephEagar

Added subscriber: @Limarest

Added subscriber: @Limarest

Default brush color definitely shouldn't be black though. Maybe make it 0.5,0.5,0.5?

Default brush color definitely shouldn't be black though. Maybe make it 0.5,0.5,0.5?
Author
Member

Changing the default brush color is something I'd like to see changed in all modes. The default right now is white, with black as the secondary color. So if you try painting when opening Blender for the first time you will see no effect ...
I'd be fine with the default primary color being black and the secondary color white. It's the most standard behaviour you could expect from any painting application that has a white canvas.

Changing the default brush color is something I'd like to see changed in all modes. The default right now is white, with black as the secondary color. So if you try painting when opening Blender for the first time you will see no effect ... I'd be fine with the default primary color being black and the secondary color white. It's the most standard behaviour you could expect from any painting application that has a white canvas.

Added subscriber: @CraigJones

Added subscriber: @CraigJones

As a non-dev here, I need to ask if the defaults are being changed to Texture paint as well as Sculpt paint, because default generated image is black so that is why the default main brush is supposed to be white - for painting masks out of the gate right away? Is sculpt to be handled in an opposite fashion or will they both be aligned? Full strength is great and a welcome change to the main brush, same for the change to smear tool - but the canvas being white with sculpt paint and black with texture paint might throw a wrench along somewhere I think.

As a non-dev here, I need to ask if the defaults are being changed to Texture paint as well as Sculpt paint, because default generated image is black so that is why the default main brush is supposed to be white - for painting masks out of the gate right away? Is sculpt to be handled in an opposite fashion or will they both be aligned? Full strength is great and a welcome change to the main brush, same for the change to smear tool - but the canvas being white with sculpt paint and black with texture paint might throw a wrench along somewhere I think.
Author
Member

@CraigJones Thanks for the info on texture paint. That makes sense. I think the default brush color can be discussed separately then for other modes.

@CraigJones Thanks for the info on texture paint. That makes sense. I think the default brush color can be discussed separately then for other modes.

Grease Pencil uses this white canvas/black initial brush - but like I said, a brush image assumes black to be alpha and white is pass through of the color, same for painting a stencil in eevee/cycles node tree, I think Krita as a 2d painter assumes a user will start with a white canvas and need to see a mark like Grease Pencil does, but Krita isn't used for making the mask itself first, it is for the image painting/texture first. JUst a difference of intended output I think.

Exciting stuff.

Grease Pencil uses this white canvas/black initial brush - but like I said, a brush image assumes black to be alpha and white is pass through of the color, same for painting a stencil in eevee/cycles node tree, I think Krita as a 2d painter assumes a user will start with a white canvas and need to see a mark like Grease Pencil does, but Krita isn't used for making the mask itself first, it is for the image painting/texture first. JUst a difference of intended output I think. Exciting stuff.
Author
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Author
Member

Raising the priority just like #97957 for the Blender 3.3 release, to polish the sculpt painting toolset.

Raising the priority just like #97957 for the Blender 3.3 release, to polish the sculpt painting toolset.
Author
Member

Will lower the priority for now. This will likely be adressed with the current brush management project.

Will lower the priority for now. This will likely be adressed with the current brush management project.
Contributor

Added subscriber: @persun

Added subscriber: @persun
Contributor

I'll also add that spacing value for gradient color's Repeat and Clamp modes should have much higher number. They don't work with the default 0 value.

{F13586622, size=full}

Preferably few hundreds px in my opinion.

I'll also add that spacing value for gradient color's Repeat and Clamp modes should have much higher number. They don't work with the default 0 value. {[F13586622](https://archive.blender.org/developer/F13586622/SculptPaintGradient.png), size=full} Preferably few hundreds px in my opinion.
Julien Kaspar added this to the Sculpt, Paint & Texture project 2023-02-08 10:48:53 +01:00
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:11:29 +01:00

Hii, @JulienKaspar Has this issue been alotted to someone? I am interested in picking it up as my first issue.

Hii, @JulienKaspar Has this issue been alotted to someone? I am interested in picking it up as my first issue.
Author
Member

@Parth-Maradia No this has not been assigned to anyone. Feel free to pick it up.

@Parth-Maradia No this has not been assigned to anyone. Feel free to pick it up.
Julien Kaspar added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-18 15:08:56 +02:00
Julien Kaspar removed this from the Sculpt, Paint & Texture project 2023-04-18 15:09:01 +02:00
Contributor

I still think this needs better default value. Maybe not fit for this task?

I'll also add that spacing value for gradient color's Repeat and Clamp modes should have much higher number. They don't work with the default 0 value.

{F13586622, size=full}

Preferably few hundreds px in my opinion.

I still think this needs better default value. Maybe not fit for this task? > I'll also add that spacing value for gradient color's Repeat and Clamp modes should have much higher number. They don't work with the default 0 value. > > {[F13586622](https://archive.blender.org/developer/F13586622/SculptPaintGradient.png), size=full} > > Preferably few hundreds px in my opinion.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97616
No description provided.